feat(projects): Basic CRUD for projects page

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,14 @@ Style/HashEachMethods:
 Style/HashTransformValues:
   Enabled: true
 
+Metrics/MethodLength:
+  Exclude:
+    - app/controllers/*
+
+Metrics/BlockLength:
+  Exclude:
+    - config/routes.rb
+
 AllCops:
   Exclude:
     - db/**/*
